# linkding-mcp-server

./: .env.sample  .gitignore  404.html  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  SECURITY.md  TODO.md  index.html  linkding_server.py  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  sitemap.xml  test_server.py
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml
.memsearch/memory/: 2026-07-24.md
api/reference/: index.html
configuration/: index.html
development/contributing/: index.html
development/testing/: index.html
docs/: configuration.md  faq.md  index.md  installation.md  observability.md  quickstart.md  troubleshooting.md
docs/api/: reference.md
docs/development/: contributing.md  testing.md
docs/examples/: prompts.md
docs/integration/: claude.md  clients.md
docs/tools/: bookmarks.md  overview.md  search.md  tags.md
faq/: index.html
installation/: index.html
integration/claude/: index.html
integration/clients/: index.html
linkding_mcp_server/: __init__.py  __main__.py  cli.py  client.py  config.py  logging_config.py  models.py  protocols.py  server.py  setup.py  telemetry.py  tools.py
quickstart/: index.html
scripts/: publish.sh
search/: search_index.json
tests/: __init__.py  conftest.py  manual_integration.py  test_cache.py  test_client.py  test_config.py  test_logging_config.py  test_models.py  test_protocols.py  test_runtime_entrypoints.py  test_server.py  test_setup.py  test_telemetry.py  test_tools.py  test_tools_integration.py
tools/bookmarks/: index.html
tools/overview/: index.html
tools/search/: index.html
tools/tags/: index.html
troubleshooting/: index.html
